<resources>
    <string name="app_name">Accelerometer</string>
    <string name="action_settings">Settings</string>
    <string name="insert">insert</string>
    <string name="view">view</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="back_to_main">back</string>
    <string name="_1hz">1Hz</string>
    <string name="_8hz">8Hz</string>
    <string name="read">Read</string>
    <string name="textview">TextView</string>
    <string name="title_activity_maps">Map</string>
    <string name="php">PHP</string>
    <string name="mappu">mappu</string>
    <string name="values">取得値</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="_8Hz">8HZ</string>
    <string name="_1Hz">1HZ</string>
</resources>
